--- a/app/src/main/res/layout/backup_menu.xml
+++ b/app/src/main/res/layout/backup_menu.xml
@@ -56,14 +56,18 @@
     </android.support.v7.widget.CardView>
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/textView"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="184dp"
+        android:paddingBottom="8dp"
         android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
         android:paddingStart="?android:attr/listPreferredItemPaddingStart"
         android:paddingTop="16dip"
-        android:paddingBottom="8dp"
         android:text="@string/local_backups"
         android:textAppearance="@android:style/TextAppearance.Material.Body2"
         android:textColor="?android:attr/colorAccent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/action_new_backup" />
 </android.support.constraint.ConstraintLayout>
