add set wallpaper and view_info

--- a/app/src/main/res/layout/backup_bottom_sheet.xml
+++ b/app/src/main/res/layout/backup_bottom_sheet.xml
@@ -73,4 +73,16 @@
         android:padding="16dp"
         android:text="Take a photo" />
 
+    <TextView
+        android:id="@+id/view_info"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:background="?selectableItemBackground"
+        android:drawablePadding="16dp"
+        android:drawableStart="@drawable/ic_list_remove"
+        android:gravity="center_vertical"
+        android:padding="16dp"
+        android:text="Info" />
+
 </LinearLayout>
